add new component counter

--- a/list_ticket-element.html
+++ b/list_ticket-element.html
@@ -6,45 +6,42 @@
         <style is="custom-style">
             paper-card.rate {
                 @apply(--layout-flex);
-                float: left;
-                margin: 10px;
-                width: 45%;
-            }
-            .rate-content {
-                @apply(--layout-flex);
-                float: left;
-            }
-            .rate-header { @apply(--paper-font-headline); }
-            .rate-name { color: var(--paper-grey-600); margin: 10px 0; }
-            paper-icon-button.rate-icon {
-                --iron-icon-fill-color: white;
-                --iron-icon-stroke-color: var(--paper-grey-600);
+                margin: 5px -5PX 5PX -5PX;
             }
         </style>
-        <div class="horizontal-section-container">
-            <iron-ajax
-                    id="ajaxPost"
-                    url="data/prices.json"
-                    last-response="{{prices}}"
-                    handle-as="json"
-                    on-response="handleResponse"></iron-ajax>
-            <iron-signals on-iron-signal-current-operator="currentOperator"></iron-signals>
-
-            <template is="dom-repeat" items="{{prices}}">
+        <iron-ajax
+                id="ajaxPost"
+                url="data/prices.json"
+                last-response="{{prices}}"
+                handle-as="json"
+                on-response="handleResponse"></iron-ajax>
+        <iron-signals on-iron-signal-current-operator="currentOperator"></iron-signals>
+        <template is="dom-repeat" items="{{prices}}">
+            <div class="small-12 medium-6 large-4 columns">
                 <paper-card class="rate">
+                    <div class="top-bar">
+                        <div class="top-bar-left">
+                            <div class="rate-header">
+                                <iron-icon icon="{{item.icon}}"></iron-icon>
+                                {{item.title}}
+                            </div>
+                        </div>
+                    </div>
                     <div class="rate-content">
                         <div class="card-content">
-                            <div class="rate-header"><iron-icon icon="{{item.icon}}"></iron-icon> {{item.title}}</div>
                             <div class="rate-name">{{item.price}} €</div>
                             <div>{{item.definition}}</div>
                         </div>
                         <div class="card-actions">
-                            <paper-button on-click="more"><iron-icon icon="add-shopping-cart"></iron-icon> Ajouter</paper-button>
+                            <paper-button on-click="more" noink raised>
+                                <iron-icon icon="add-shopping-cart"></iron-icon>
+                                Ajouter
+                            </paper-button>
                         </div>
                     </div>
                 </paper-card>
-            </template>
-        </div>
+            </div>
+        </template>
     </template>
     <script>
         Polymer({
