--- a/app.html
+++ b/app.html
@@ -5,7 +5,7 @@
 
     <title>Polymer Ticket-Office</title>
 
-    <link rel="stylesheet" href="bower_components/foundation-sites/dist/foundation.css" />
+    <link rel="stylesheet" href="bower_components/foundation-sites/dist/foundation.css"/>
 
 
     <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
@@ -18,27 +18,29 @@
 
     <link rel="import" href="header-element.html">
     <link rel="import" href="list_ticket-element.html">
+    <link rel="import" href="counter-cart-element.html">
     <link rel="import" href="cart-element.html">
 
     <style>
-        list_ticket-element{
-            height: 10px;
-            width: 75%;
-            float: left;
-        }
-        cart-element{
+        .cart {
             margin-top: 5px;
-            width: 25%;
-            float: left;
+            float: right;
         }
     </style>
 </head>
 <body>
 
+<div class="small-12 columns">
+    <header-element></header-element>
+</div>
+<div class="small-12 medium-4 columns cart">
+    <counter-cart-element></counter-cart-element>
+    <cart-element></cart-element>
+</div>
+<div class="small-12 medium-8 columns tickets">
+    <list_ticket-element></list_ticket-element>
+</div>
 
-<header-element></header-element>
-<list_ticket-element></list_ticket-element>
-<cart-element></cart-element>
 
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/what-input/what-input.min.js"></script>
