--- a/cart-element.html
+++ b/cart-element.html
@@ -7,11 +7,6 @@
 
 <dom-module id="cart-element">
     <style is="custom-style">
-        paper-header-panel {
-            float: left;
-            width: 100%;
-            @apply(--shadow-elevation-2dp);
-        }
 
         .paper-header {
             height: 60px;
@@ -32,12 +27,9 @@
     </style>
     <template>
         <paper-header-panel class="blue">
-            <div class="paper-header">
-                <iron-icon icon="shopping-cart"></iron-icon>
-                Cart {{sumOrder}} €
-            </div>
             <div class="content">
                 <iron-signals on-iron-signal-add-order="addOrder"></iron-signals>
+                <iron-signals on-iron-signal-reset-cart="resetCart"></iron-signals>
 
                 <template is="dom-repeat" items="{{orders}}">
                     <paper-material class="orderTicket" elevation="3">
@@ -77,7 +69,8 @@
                         this.orders = []
             },
             listeners: {
-                'addOrder': 'addOrder'
+                'addOrder': 'addOrder',
+                'resetCart': 'resetCart',
             },
             addOrder: function (e, detail) {
 
@@ -86,34 +79,43 @@
 
                 if (indexOf < 0) {
                     order.ordered = 1;
-                    order.priceTotal = parseFloat(order.price);
+                    order.priceTotal = parseFloat(order.price).toFixed(2);
                     this.push('orders', order);
-                    this.sumOrder = parseFloat(this.sumOrder) + parseFloat(order.price);
                 } else {
                     var item = this.orders[indexOf];
                     this.set('orders.' + indexOf + '.ordered', item.ordered + 1);
-                    this.set('orders.' + indexOf + '.priceTotal', item.priceTotal + parseFloat(item.price));
-                    this.sumOrder = parseFloat(this.sumOrder) + parseFloat(item.price);
+                    var sum = parseFloat(item.priceTotal);
+                    sum+=parseFloat(item.price);
+                    this.set('orders.' + indexOf + '.priceTotal', sum.toFixed(2));
                 }
+                this.fire('iron-signal', {name: "up-order", data: order});
             },
             add: function (e) {
                 var model = e.model;
                 var indexOf = this.orders.indexOf(model.item);
                 var item = this.orders[indexOf];
                 this.set('orders.' + indexOf + '.ordered', item.ordered + 1);
-                this.set('orders.' + indexOf + '.priceTotal', item.priceTotal + parseFloat(item.price));
-                this.sumOrder = parseFloat(this.sumOrder) + parseFloat(item.price);
-
+                var sum = parseFloat(model.item.priceTotal);
+                sum+=parseFloat(model.item.price);
+                this.set('orders.' + indexOf + '.priceTotal', sum.toFixed(2));
+                this.fire('iron-signal', {name: "up-order", data: item});
             },
             remove: function (e) {
                 var model = e.model;
                 model.set('item.ordered', model.item.ordered - 1);
-                model.set('item.priceTotal', model.item.priceTotal - parseFloat(model.item.price));
-                this.sumOrder = parseFloat(this.sumOrder) - parseFloat(model.item.price);
+                var sum = parseFloat(model.item.priceTotal);
+                sum-=parseFloat(model.item.price);
+                model.set('item.priceTotal', sum.toFixed(2));
 
                 if (model.item.ordered == 0) {
                     var indexOf = this.orders.indexOf(model.item);
                     this.splice('orders', indexOf, 1);
+                }
+                this.fire('iron-signal', {name: "remove-order", data: model.item});
+            },
+            resetCart: function(e, detail){
+                if(detail.resetCart == true){
+                    this.orders = [];
                 }
             }
         });
