--- a/header-element.html
+++ b/header-element.html
@@ -7,7 +7,7 @@
     <template>
         <style>
             .top-bar, .top-bar ul {
-                background-color: #0079af;
+                background-color: #005b87;
                 color: #FFFFFF;
             }
 
