--- a/app.html
+++ b/app.html
@@ -37,7 +37,7 @@
     <counter-cart-element></counter-cart-element>
     <cart-element></cart-element>
 </div>
-<div class="small-12 medium-8 columns tickets">
+<div class="small-12 medium-8 columns">
     <list_ticket-element></list_ticket-element>
 </div>
 
