--- a/cart-element.html
+++ b/cart-element.html
@@ -7,18 +7,8 @@
 
 <dom-module id="cart-element">
     <style is="custom-style">
-
-        .paper-header {
-            height: 60px;
-            font-size: 16px;
-            line-height: 60px;
-            padding: 0 10px;
-            color: white;
-            transition: height 0.2s;
-        }
-
-        .blue .paper-header {
-            background-color: var(--paper-light-blue-500);
+        .content{
+            border: solid 1px #f6f6f6;
         }
 
         .orderTicket {
@@ -32,7 +22,7 @@
                 <iron-signals on-iron-signal-reset-cart="resetCart"></iron-signals>
 
                 <template is="dom-repeat" items="{{orders}}">
-                    <paper-material class="orderTicket" elevation="3">
+                    <paper-material class="orderTicket" elevation="1">
                         <paper-item>
                             <iron-icon icon="{{item.icon}}"></iron-icon>
                             <paper-item-body two-line>
