--- a/app.html
+++ b/app.html
@@ -6,10 +6,10 @@
     <title>Polymer Ticket-Office</title>
 
     <link rel="stylesheet" href="bower_components/foundation-sites/dist/foundation.css"/>
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css"/>
 
 
     <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-
 
     <link rel="import" href="bower_components/paper-listbox/paper-listbox.html">
     <link rel="import" href="bower_components/iron-ajax/iron-ajax.html">
