--- a/app.html
+++ b/app.html
@@ -5,9 +5,8 @@
 
     <title>Polymer Ticket-Office</title>
 
-    <link rel="stylesheet" href="bower_components/foundation-sites/dist/foundation.css"/>
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css"/>
-
 
     <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 
@@ -22,28 +21,27 @@
     <link rel="import" href="cart-element.html">
 
     <style>
-        .cart {
-            margin-top: 5px;
-            float: right;
+        .list-ticket {
+            margin-top: 45px;
         }
     </style>
 </head>
 <body>
-
-<div class="small-12 columns">
-    <header-element></header-element>
+<div class="row">
+    <div class="col-xs-12">
+        <header-element></header-element>
+    </div>
+    <div class="list-ticket col-xs-8">
+        <list_ticket-element></list_ticket-element>
+    </div>
+    <div class="col-xs-4">
+        <counter-cart-element></counter-cart-element>
+        <cart-element></cart-element>
+    </div>
 </div>
-<div class="small-12 medium-4 columns cart">
-    <counter-cart-element></counter-cart-element>
-    <cart-element></cart-element>
-</div>
-<div class="small-12 medium-8 columns">
-    <list_ticket-element></list_ticket-element>
-</div>
-
 
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/what-input/what-input.min.js"></script>
-<script src="bower_components/foundation-sites/dist/foundation.min.js"></script>
+<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
