--- a/header-element.html
+++ b/header-element.html
@@ -5,10 +5,25 @@
 <dom-module id="header-element">
 
     <template>
-        <style>
-            .top-bar, .top-bar ul {
+        <style is="custom-style">
+            .navbar {
                 background-color: #005b87;
-                color: #FFFFFF;
+                color: white;!important;
+            }
+
+            .navbar-default .navbar-brand, .navbar-nav>li>a{
+                color: white;!important;
+            }
+            .navbar-default .navbar-nav>li>a:focus{
+                color: #005b87;!important;
+            }
+            .dropdown-menu{
+                padding: 5px 5px 5px 10px;
+            }
+            .dropdown-menu li{
+                color: darkslategrey;
+                font-size: 15px;
+                cursor: hand;
             }
 
             paper-dropdown-menu.operator {
@@ -39,27 +54,31 @@
                 handle-as="json"
                 on-response="handleResponse"></iron-ajax>
         <header>
-            <div class="top-bar">
-                <div class="top-bar-left">
-                    <h5 class="menu-text">Ticket Office</h5>
-                </div>
-                <div class="top-bar-right">
-                    <ul class="menu">
-                        <li>
-                            <iron-icon icon="face"></iron-icon>
-                        </li>
-                        <li>
-                            <paper-dropdown-menu class="operator" label="Operator" no-label-float>
-                                <paper-listbox class="dropdown-content">
+            <nav class="navbar navbar-default navbar-fixed-top">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="#">Ticket Office</a>
+                    </div>
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><iron-icon icon="face"></iron-icon> Operator <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
                                     <template is="dom-repeat" items="{{users}}">
-                                        <paper-item on-click="selectOperator">{{item.name}}</paper-item>
+                                        <li on-click="selectOperator">{{item.name}}</li>
                                     </template>
-                                </paper-listbox>
-                            </paper-dropdown-menu>
-                        </li>
-                    </ul>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
+            </nav>
         </header>
     </template>
 
