--- a/app.html
+++ b/app.html
@@ -19,6 +19,7 @@
     <link rel="import" href="list_ticket-element.html">
     <link rel="import" href="counter-cart-element.html">
     <link rel="import" href="cart-element.html">
+    <link rel="import" href="aside-element.html">
 
     <style>
         .list-ticket {
@@ -31,7 +32,10 @@
     <div class="col-xs-12">
         <header-element></header-element>
     </div>
-    <div class="list-ticket col-xs-8">
+    <div class="col-xs-1">
+        <aside-element></aside-element>
+    </div>
+    <div class="list-ticket col-xs-7">
         <list_ticket-element></list_ticket-element>
     </div>
     <div class="col-xs-4">
