--- a/app.html
+++ b/app.html
@@ -20,6 +20,7 @@
     <link rel="import" href="counter-cart-element.html">
     <link rel="import" href="cart-element.html">
     <link rel="import" href="aside-element.html">
+    <link rel="import" href="user-form-element.html">
 
     <style>
         .list-ticket {
@@ -36,7 +37,10 @@
         <aside-element></aside-element>
     </div>
     <div class="list-ticket col-xs-7">
+        <user-form-element></user-form-element>
         <list_ticket-element></list_ticket-element>
+
+
     </div>
     <div class="col-xs-4">
         <counter-cart-element></counter-cart-element>
